Home page Added

--- a/client/src/stylesheet/textElements.css
+++ b/client/src/stylesheet/textElements.css
@@ -27,3 +27,12 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+h1{
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+i{
+  font-size: 20px;
+}
