Hamburger Menu Added

--- a/client/src/stylesheet/layout.css
+++ b/client/src/stylesheet/layout.css
@@ -10,6 +10,34 @@
   padding: 15px;
   border-radius: 3px;
   height: 100%;
+  display: flex;
+  align-items: center;
+}
+.menu{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+}
+.menu-item{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  color: white;
+  padding: 5px;
+  cursor: pointer;
+}
+.menu-item h1{
+  color: white !important;
+}
+.active-menu-item{
+  border: 1px solid var(--secondary);
+  border-radius: 2px;
+  color: var(--secondary) !important;
+  padding: 5px 10px;
+}
+.active-menu-item h1{
+  color: var(--secondary) !important;
 }
 .body{
   width: 100%;
