--- a/client/src/stylesheet/customComponents.css
+++ b/client/src/stylesheet/customComponents.css
@@ -2,3 +2,23 @@
   background-color: white;
   box-shadow: 0 0 3px 0 rgba(0,0,0,0.1);
 }
+.loader{
+  height: 80px;
+  width: 80px;
+  border: 5px solid #e0e0e0;
+  border-radius: 50%;
+  border-top-color: #c4c4c49d;
+  animation: loader-anim 1s linear infinite;
+}
+table{
+  border: 1px solid #c4c4c49d;
+}
+
+@keyframes loader-anim{
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
