--- a/client/src/stylesheet/textElements.css
+++ b/client/src/stylesheet/textElements.css
@@ -27,6 +27,9 @@
   text-decoration: underline;
   cursor: pointer;
 }
+.uppercase{
+  text-transform: uppercase;
+}
 
 h1{
   padding-bottom: 0 !important;
@@ -35,4 +38,5 @@ h1{
 
 i{
   font-size: 20px;
+  cursor: pointer;
 }
