This commit marks the completion of the CashMate project.

--- a/client/src/stylesheet/layout.css
+++ b/client/src/stylesheet/layout.css
@@ -21,7 +21,7 @@
 }
 .menu-item{
   display: flex;
-  align-items: center;
+  align-items: self-end;
   gap: 15px;
   color: white;
   padding: 5px;
